# teleChatBot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  TELEGRAM_MARKDOWN_IMPLEMENTATION.md  demo_telegram_formatting.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_message_extraction.py
.github/: DEPLOY_QUICKSTART.md
.github/workflows/: ci.yml  deploy.yml  docs-gh-pages.yml  python-tests.yml
config/: allowed_users.example.yaml  config.example.yaml
docs/: .nojekyll  Makefile  conf.py  index.md  make.bat  requirements.txt
docs/_static/: custom.css
docs/api/: admin_commands.md  bot.md  bot_database.md  cli.md  config.md  conversation_memory.md  index.md  mistral_client.md  model_selector.md  provider_router.md  reaction_analyzer.md  web_search.md
docs/architecture/: class_diagram.puml  components.md  overview.puml  request_flow.puml
docs/guides/: admin.md  cli.md  configuration.md  installation.md
scripts/: verify_message_extraction.py
src/: main.py
src/api/: admin_commands.py  bot_database.py  conversation_memory.py  gemma_client.py  groq_client.py  mistral_client.py  model_selector.py  provider_router.py  reaction_analyzer.py  web_search.py
src/bot/: bot.py
src/bot/filters/: access_filter.py
src/bot/handlers/: admin_handler.py  command_handler.py  message_handler.py
src/cli/: __init__.py  cli_chat.py
src/config/: settings.py
src/utils/: telegram_format.py
tests/: test_access_filter.py  test_admin_commands.py  test_bot_database.py  test_cli_admin_commands.py  test_config.py  test_conversation_memory.py  test_gemma_client.py  test_groq_client.py  test_handlers.py  test_mistral_client.py  test_model_selector.py  test_provider_router.py  test_rate_limiting.py  test_reaction_analyzer.py  test_sigint_windows.py  test_streaming.py  test_telegram_format.py  test_web_search.py
