[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleChatBot"
version = "0.1.0"
description = "Telegram bot bridge to Mistral API"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22.0",
    "mistralai>=1.0,<2.0",
    "groq>=0.25.0,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "pydocstyle[toml]>=6.3,<7.0",
    "docstr-coverage>=2.3,<3.0",
]
docs = [
    "sphinx>=7.4,<9.0",
    "sphinx-rtd-theme>=2.0,<3.0",
    "sphinx-autodoc-typehints>=2.0,<3.0",
    "myst-parser>=3.0,<5.0",
    "sphinxcontrib-plantuml>=0.29,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",   # Missing docstring in public module (handled per-module)
    "D104",   # Missing docstring in public package (__init__.py)
    "D107",   # Missing docstring in __init__ (covered by napoleon)
]
match-dir = "src"
match = "(?!test_).*\\.py"

[tool.docstr-coverage]
minpercentage = 70
exclude = ["tests/", ".*__pycache__.*"]
verbose = 2
skip-file-doc = false
skip-magic = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
